2006/04/23	kaffeetisch

	* MANIFEST, maps-2.10, xs_files-2.10, t/GtkStatusIcon.t,
	xs/GtkStatusIcon.xs: The gtk2-perl tag team, muppet and me, adds
	support for GtkStatusIcon.

2006/04/08	kaffeetisch

	* Gtk2.pm, NEWS, README: Stable release 1.121.

2006/03/38	muppetman

	* t/Gdk.t: Don't call Gtk2::Gdk::Threads::init on a non-threading perl.

2006/03/12	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Stable release 1.120.

2006/02/13	kaffeetisch

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.116.

2006/02/05 04:26 pcg

	* xs/GdkRegion.xs: Fix access after free() in get_rectangles.

2006/02/02	muppetman

	* xs/GtkWidget.xs: Silly logic error in _INSTALL_OVERRIDES caused 
	confusing but harmless warnings about set-scroll-adjustments signals.
	Need to test the instance type of the signal separately from the
	correctness of the signature.

2006/01/30	kaffeetisch

	* Makefile.PL: Check for gtk+ >= 2.8.0 before adding GdkCairo.xs
	and PangoCairo.xs to the build.

	* Gtk2.pm, Makefile.PL, NEWS, README: Unstable release 1.115.

2006/01/29	muppetman

	* MANIFEST, t/set-scroll-adjustments-signal.t, xs/GtkWidget.xs:
	In perl-derived Gtk2::Widgets, recognize signals named
	"set-scroll-adjustments" as special, and set their signal ids
	into GtkWidgetClass::set_scroll_adjustments_signal.  This makes
	it possible to implement natively-scrollable widgets in perl.

	This approach assumes the name name of the signal instead of
	following the completely generic approach taken by gtk+.  The
	idea is to hide some of the hackishness of the rather clunky,
	pre-GInterface scheme from perl developers.

2006/01/24	kaffeetisch

	* maps-2.0, maps-2.4: Register GtkCellEditable, GtkTreeModel,
	GtkTreeSortable and GtkFileChooser as GInterfaces since that's
	what they are.

	* xs/GtkTreeModelSort.xs: Make the xsubs for
	gtk_tree_model_sort_new_with_model and gtk_tree_model_sort_new
	return GtkTreeModelSorts instead of GtkTreeModels.  The latter is