@@ -1,5 +1,13 @@
 2006/04/23	kaffeetisch
 
+	* Gtk2/t/GtkCellLayout.t, Gtk2/t/GtkExpander.t,
+	Gtk2/t/GtkMenuItem.t, Gtk2/t/GtkRadioButton.t,
+	Gtk2/t/GtkRadioToolButton.t, Gtk2/t/GtkScrolledWindow.t,
+	Gtk2/t/GtkToggleButton.t: Remove the noinit flag from some tests
+	that now apparently need an initialized gtk+.
+
+2006/04/23	kaffeetisch
+
 	* MANIFEST, maps-2.10, xs_files-2.10, t/GtkStatusIcon.t,
 	xs/GtkStatusIcon.xs: The gtk2-perl tag team, muppet and me, adds
 	support for GtkStatusIcon.
